# lib_mysqludf_dom

./: API  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  dom.c  installdb.sql  ns.c  ns.h  uninstalldb.sql
config/: ax_lib_mysql.m4
test/: 0-dom_xpath.result  0-dom_xpath.test  1-dom_extract_node.result  1-dom_extract_node.test  2-dom_delete_node.result  2-dom_delete_node.test  3-dom_replace_node.result  3-dom_replace_node.test  4-dom_append_child.result  4-dom_append_child.test
